# cpp-template

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  TODO
.devcontainer/: devcontainer.json  entrypoint.sh
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
docs/: Doxyfile  ai-assistant-guide.md  ci-container-delegation.md  devcontainer-guide.md  public-private-guide.md  remote-debugging.md  rpath-guide.md
scripts/: build.sh  build_image.sh  coverage.sh  docs.sh  env.sh  format.sh  install-hooks.sh  launch_gdbserver.sh  lint.sh  package.sh  run.sh  test.sh
scripts/docker/: attach.sh  build_image.sh  entrypoint.sh  exec.sh  run.sh
src/example_interface/: CMakeLists.txt
src/example_interface/include/: example_interface.hpp
src/example_plugin_impl/: CMakeLists.txt  plugin_impl.cpp
src/example_plugin_loader/: CMakeLists.txt  plugin_api.hpp  plugin_loader.cpp
src/example_public_private/: CMakeLists.txt
src/example_public_private/include/: example_public_private.hpp
src/example_public_private/src/: example_public_private.cpp  private_example.cpp  private_example.hpp
src/example_shared/: CMakeLists.txt  example_shared.cpp  example_shared.hpp
src/example_static/: CMakeLists.txt  example_static.cpp  example_static.hpp
src/example_usage/: CMakeLists.txt
src/example_usage/include/: example_usage.hpp
src/example_usage/src/: example_usage.cpp
src/libshared/: CMakeLists.txt  string_utils.cpp  string_utils.hpp
src/libstatic/: CMakeLists.txt  math_utils.cpp
src/main/: CMakeLists.txt  main.cpp
src/plugin_impl/: CMakeLists.txt  plugin_impl.cpp
src/plugin_loader/: CMakeLists.txt  plugin_api.hpp  plugin_loader.cpp
tests/: CMakeLists.txt  test_example_interface.cpp  test_example_public_private.cpp  test_example_shared.cpp  test_example_static.cpp  test_example_usage.cpp  test_helpers.hpp  test_integration.cpp  test_main.cpp  test_plugin_loader.cpp
